--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-
+    implementation 'com.abdshammout.UBV:library:1.0.2'
     testImplementation 'junit:junit:4.12'
 }
